# toycalculator

./: .clang-format  .gitignore  CMakeLists.txt  Changelog.md  Claude_code_review_Feb_2026.md  Doxyfile  LICENSE  OLD.md  README.md  README.txt  Silly.g4  TODO.md  Toy.g4  ToyCalculator.g4  b  breakpoints.txt  calculator.g4  env.sh  lit.site.cfg.py.in
prototypes/standalone/: CMakeLists.txt  README.md  empty.c  for.c  if-scope-di.c  mkcir  mkll  mlirtest.cpp  mlirtest.proto  printf-double.c  return.c  simplest.cpp
src/bisonGrammar/: BisonParseListener.cpp  BisonParseListener.hpp  CMakeLists.txt  silly.l  silly.y  silly_bison.l  silly_bison.y
src/bisonGrammar/unittests/: arr.silly  b.silly  bar.silly  call.silly  cont.silly  foo.silly  func.silly  initzero.silly  proto.silly  unary.silly
src/dialect/: CMakeLists.txt  SillyDialect.cpp  SillyDialect.hpp  SillyPasses.cpp  SillyPasses.hpp  SillyPasses.td  SillyTypes.cpp  SillyTypes.hpp  silly.td
src/driver/: Builder.cpp  CMakeLists.txt  CompilationUnit.cpp  CompilationUnit.hpp  DialectContext.cpp  DialectContext.hpp  DriverState.cpp  InsertionPointGuard.hpp  LocationStack.cpp  LoweringContext.cpp  LoweringContext.hpp  MlirTypeCache.cpp  ModuleInsertionPointGuard.hpp  OptLevel.hpp  ParseListener.cpp  ParseListener.hpp  ParserPerFunctionState.cpp  ReturnCodes.hpp  SourceManager.cpp  SourceManager.hpp  diagnostics.cpp  diagnostics.hpp  driver.cpp  helper.cpp  helper.hpp  lowering.cpp  loweringContext.hpp  parser.cpp  parser.hpp
src/runtime/: CMakeLists.txt  Silly_runtime.cpp  version_script.map
tests/endtoend/: CMakeLists.txt  a2.silly  andop.silly  array_assign_and_use.silly  array_in_expr.silly  array_index_var.silly  assign_to_array_complex.silly  bin.silly  boolliteral.silly  chained_comparison_parens.silly  const_overflow.silly  dcl.silly  dcl_assign.silly  error_array_too_many_init.silly  error_invalid_binary.silly  error_invalid_unary.silly  error_nonconst_init.silly  error_redeclare.silly  error_zero_step_for.silly  expressions_in_if.silly  fatal.silly  foo.silly  function_two.silly  init_expr_call.silly  initlist.silly  initstring.silly  int32.silly  longstring.silly  neg.silly  not_on_expr.silly  orop.silly  printboollit.silly  shortstring2.silly  simplest.silly  stringlit.silly  unary.silly
tests/endtoend/array/: CMakeLists.txt
tests/endtoend/bool/: CMakeLists.txt  boolr.silly
tests/endtoend/builtins/: CMakeLists.txt
tests/endtoend/debug/: CMakeLists.txt  f.check  foo.check  for_simplest.check
tests/endtoend/driver/: CMakeLists.txt  call2.silly  callee.silly  callmod.silly  mod2.silly  one.silly
tests/endtoend/dwarfdump/: CMakeLists.txt
tests/endtoend/exit/: CMakeLists.txt  bool.silly  exitarrayelement.silly  exitx.silly
tests/endtoend/expected/: bool.out  function.out  function_foo_with_local.out  function_return.out  function_two.out  lessbug2.out  neqop.out  not.out  return_complex.out  xorop.out
tests/endtoend/expressions/: CMakeLists.txt  expressions4.silly  expressions_assignment.silly  mod2.silly  mult.silly  test.silly
tests/endtoend/failure/: .gdbinit  CMakeLists.txt  README.md  bad_call_num_params.silly  error_bad_return_elif.silly  error_bad_return_else.silly  error_bad_return_for.silly  error_chained_comparison2.silly  error_for2.silly  error_function_redeclare.silly  error_function_redefine.silly  error_get_string.silly  error_invalid_bool_add.silly  error_multiple_in_func.silly  error_nested.silly  error_notfloat.silly  error_stringreturn.silly  function_without_return.silly
tests/endtoend/fatal/: CMakeLists.txt
tests/endtoend/for/: CMakeLists.txt  for_simplest.silly  forbreak.mlsilly
tests/endtoend/function/: CMakeLists.txt  function_foo_with_local.silly  function_intret_void.silly  function_plist.silly  minmax.silly  nested.silly
tests/endtoend/get/: CMakeLists.txt  getbool.silly
tests/endtoend/ifelifelse/: CMakeLists.txt  elif3.silly
tests/endtoend/init/: CMakeLists.txt  initarray.silly  initlisttrunc.silly  inits.silly
tests/endtoend/initfill/: CMakeLists.txt  arrayprod.silly
tests/endtoend/misc/: CMakeLists.txt
tests/endtoend/mlirparsetest/: CMakeLists.txt  two_declare_no_init.check  two_declare_no_init.silly
tests/endtoend/operators/: CMakeLists.txt  lessbug.silly
tests/endtoend/print/: CMakeLists.txt  printexpr.silly
tests/endtoend/simple/: CMakeLists.txt  simpleless.silly
tests/endtoend/sir/: CMakeLists.txt
tests/endtoend/string/: CMakeLists.txt  shortstring.silly
tests/endtoend/types/: CMakeLists.txt  loadstore.silly  mixed_type_assignment.silly
tests/lit/: CMakeLists.txt  README.md  lit.cfg.py  lit.site.cfg.py.in
tests/lit/debug/: CMakeLists.txt  README.md  columnar-debuginfo.silly  debug-two-declare-order.silly  induction-var-debuginfo.silly  lit.cfg.py  two_declare_no_init.silly
tests/lit/dialect/: CMakeLists.txt  bad_declare_2darray.mlir  bad_declare_not_var_return.mlir  bad_declare_ty_no_gt.mlir  bad_declare_ty_no_less.mlir  bad_return_string.mlir  lit.cfg.py
tests/lit/driver/: CMakeLists.txt  README.md  bad-llvm-ir-output-path-should-fail.silly  bad-mlir-path-should-fail.silly  bad-suffix-should-fail.silly  call1module-with-proto.silly  call2modules.silly  d1.silly  emit-llvm-both-should-fail.silly  emit-llvm-o.silly  emit-llvm-outputdir.silly  emit-llvmbc-o.silly  emit-llvmbc-outputdir.silly  emit-mlir-both-should-fail.silly  emit-mlir-o.silly  emit-mlir-outputdir.silly  emit-mlirbc-o.silly  emit-mlirbc-outputdir.silly  generate-lit-emit-tests.pl  keep-temp-bc.silly  keep-temp.silly  link-failure.silly  lit.cfg.py  mod1.silly  module-bad.silly  multi-source-with-c-and-o-should-fail.silly  not-enough-args-should-fail.silly  silly-version.silly  twosource-caller.silly  verbose-link.silly
tests/lit/exit/: CMakeLists.txt  bool.silly  exit3.silly  exit42.silly  generate_exit_test.pl  int32.silly  lit.cfg.py
tests/lit/fatal/: CMakeLists.txt  fatal.silly  lit.cfg.py
tests/lit/get/: CMakeLists.txt  generate_get_test.pl  get.silly  getbool.silly  lit.cfg.py
tests/lit/syntax/: CMakeLists.txt  README.md  error_arrayreturn.silly  (+19 more)
(+1026 files in other folders)
